--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,5 @@ alembic/test/db.cfg
 alembic/test/alembic/__pycache__/
 alembic/opdb_summit/db.cfg
 alembic/opdb_summit/alembic/__pycache__/
+alembic/opdb_asrd/db.cfg
+alembic/opdb_asrd/alembic/__pycache__/
