--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,4 @@ alembic/opdb_summit/db.cfg
 alembic/opdb_summit/alembic/__pycache__/
 alembic/opdb_asrd/db.cfg
 alembic/opdb_asrd/alembic/__pycache__/
+/.venv
