--- a/.gitignore
+++ b/.gitignore
@@ -10,4 +10,6 @@ alembic/opdb_summit/db.cfg
 alembic/opdb_summit/alembic/__pycache__/
 alembic/opdb_asrd/db.cfg
 alembic/opdb_asrd/alembic/__pycache__/
+alembic/qadb_ipmu/db.cfg
+alembic/qadb_ipmu/alembic/__pycache__/
 /.venv
