Update `opdb` package - tickets/INSTRM-2730
* Add `pyproject.toml` and remove old `setup.py`.
* Add `eupspkg.cfg.sh` for EUPS compatibility.
* Change relative imports to absolute.

--- a/.gitignore
+++ b/.gitignore
@@ -11,3 +11,5 @@ alembic/opdb_summit/alembic/__pycache__/
 alembic/opdb_asrd/db.cfg
 alembic/opdb_asrd/alembic/__pycache__/
 /.venv
+.idea
+python/opdb/version.py
